# mves

./: CMakeLists.txt
DemoNucleoH503/: main.c
DemoNucleoH503/BSP/: bsp_nucleo_h503.c  bsp_nucleo_h503.h
DemoNucleoH503/IT_Handler/: stm32h5xx_it.h
DemoNucleoH563/: CMakeLists.txt  main.c
DemoNucleoH563/BSP/: CMakeLists.txt  bsp_nucleo_h563.c  bsp_nucleo_h563.h
DemoNucleoH563/IT_Handler/: CMakeLists.txt  stm32h5xx_it.h
Deployment/: main.c
Deployment/BSP/: CMakeLists.txt  bsp_deployment.c  bsp_deployment.h  bsp_imu.c  bsp_imu.h  bsp_imu_regs.h  bsp_motor.h
Deployment/IT_Handler/: stm32h5xx_it.c
DeploymentModule/: CMakeLists.txt  main.c
DeploymentModule/BSP/: CMakeLists.txt  bsp_deployment.c  bsp_deployment.h
DeploymentModule/Deployment/: CMakeLists.txt  deployment.c  deployment.h
DeploymentModule/IMU/: CMakeLists.txt  imu.c  imu.h
DeploymentModule/IT_Handler/: CMakeLists.txt  stm32h5xx_it.c
MTuSC/: CMakeLists.txt  main.c
MTuSC/BSP/: CMakeLists.txt  bsp_mtusc.c  bsp_mtusc.h
MTuSC/IT_Handler/: CMakeLists.txt  stm32h5xx_it.c  stm32h5xx_it.h
MTuSC/MTuSC/: CMakeLists.txt  mtusc.c  mtusc.h
MTuSCModule/: CMakeLists.txt  main.c
MTuSCModule/BSP/: CMakeLists.txt  bsp_mtusc.c  bsp_mtusc.h
MTuSCModule/IT_Handler/: CMakeLists.txt
MTuSCModule/MTuSC/: CMakeLists.txt  mtusc.c  mtusc.h
MainCompute/: CMakeLists.txt  main.c
MainCompute/BSP/: CMakeLists.txt  bsp_main_compute.c
MainCompute/IT_Handler/: stm32h5xx_it.h
MainComputeModule/: CMakeLists.txt  main.c
MainComputeModule/BSP/: CMakeLists.txt  bsp_maincompute.c  bsp_maincompute.h
MainComputeModule/IT_Handler/: CMakeLists.txt  stm32h5xx_it.c
MainComputeModule/MainCompute/: CMakeLists.txt  maincompute.c  maincompute.h
PowerModule/: main.c
PowerModule/BSP/: CMakeLists.txt  bsp_power.c  bsp_power.h
PowerModule/IT_Handler/: CMakeLists.txt
common/: CMakeLists.txt  README.md
common/bno055/: CMakeLists.txt  bno055.c  bno055.h  bno055_regs.h
common/console/: CMakeLists.txt  console.c  native_commands.c  native_commands.h
common/dc_motor/: dc_motor.h
common/mcan/: CMakeLists.txt  mcan.c  mcan.h  sensor_nodes.c  sensor_nodes.h
common/servo/: CMakeLists.txt  servo.c
common/utility/: utility.c  utility.h
manticore/: CMakeLists.txt
manticore/DemoNucleoH503/: CMakeLists.txt  main.c
manticore/DemoNucleoH503/BSP/: CMakeLists.txt  bsp_nucleo_h503.c  bsp_nucleo_h503.h
manticore/DemoNucleoH503/IT_Handler/: stm32h5xx_it.c
manticore/DemoNucleoH563/: CMakeLists.txt  main.c
manticore/DemoNucleoH563/BSP/: CMakeLists.txt  bsp_nucleo_h563.c  bsp_nucleo_h563.h
manticore/DemoNucleoH563/IT_Handler/: stm32h5xx_it.c  stm32h5xx_it.h
manticore/common/: CMakeLists.txt
manticore/common/console/: console.c  console.h
manticore/common/dc_motor/: CMakeLists.txt  dc_motor.c  dc_motor.h
manticore/common/mcan/: CMakeLists.txt  mcan.c  mcan.h  sensor_nodes.c
manticore/common/servo/: CMakeLists.txt  servo.c  servo.h
manticore/common/utility/: CMakeLists.txt  utility.h
manticore/mcu_support/ST/: CMakeLists.txt
manticore/mcu_support/ST/HAL/: CMakeLists.txt
manticore/mcu_support/ST/HAL/include/: stm32h5xx_hal_conf.h
manticore/mcu_support/ST/linker/: CMakeLists.txt  STM32H563xx_FLASH.ld
manticore/scripts/: build.sh
mcu_support/ST/CMSIS/STM32H5xx/include/: stm32h5xx.h
mcu_support/ST/HAL/include/: stm32h5xx_hal_conf.h
mcu_support/ST/linker/: STM32H503xx_FLASH.ld  STM32H563xx_FLASH.ld
scripts/: build.sh
test/: CMakeLists.txt  README.md
test/DemoNucleoH503/BSP/: CMakeLists.txt  bsp_nucleo_h503.c  bsp_nucleo_h503.h
test/DemoNucleoH503/IT_Handler/: CMakeLists.txt
test/DemoNucleoH563/BSP/: bsp_nucleo_h563.h
test/mcu_support/: CMakeLists.txt
test/mcu_support/ST/CMSIS/: CMakeLists.txt
test/mcu_support/ST/startup/: CMakeLists.txt
test/mcu_support/periph_drivers/: README.md
