# Create the library
add_library(HAL
    source/stm32h5xx_hal_adc.c
    source/stm32h5xx_hal_adc_ex.c
    source/stm32h5xx_hal.c
    source/stm32h5xx_hal_cec.c
    source/stm32h5xx_hal_comp.c
    source/stm32h5xx_hal_cordic.c
    source/stm32h5xx_hal_cortex.c
    source/stm32h5xx_hal_crc.c
    source/stm32h5xx_hal_crc_ex.c
    source/stm32h5xx_hal_cryp.c
    source/stm32h5xx_hal_cryp_ex.c
    source/stm32h5xx_hal_dac.c
    source/stm32h5xx_hal_dac_ex.c
    source/stm32h5xx_hal_dcache.c
    source/stm32h5xx_hal_dcmi.c
    source/stm32h5xx_hal_dma.c
    source/stm32h5xx_hal_dma_ex.c
    source/stm32h5xx_hal_dts.c
    source/stm32h5xx_hal_eth.c
    source/stm32h5xx_hal_eth_ex.c
    source/stm32h5xx_hal_exti.c
    source/stm32h5xx_hal_fdcan.c
    source/stm32h5xx_hal_flash.c
    source/stm32h5xx_hal_flash_ex.c
    source/stm32h5xx_hal_fmac.c
    source/stm32h5xx_hal_gpio.c
    source/stm32h5xx_hal_gtzc.c
    source/stm32h5xx_hal_hash.c
    source/stm32h5xx_hal_hcd.c
    source/stm32h5xx_hal_i2c.c
    source/stm32h5xx_hal_i2c_ex.c
    source/stm32h5xx_hal_i2s.c
    source/stm32h5xx_hal_i2s_ex.c
    source/stm32h5xx_hal_i3c.c
    source/stm32h5xx_hal_icache.c
    source/stm32h5xx_hal_irda.c
    source/stm32h5xx_hal_iwdg.c
    source/stm32h5xx_hal_lptim.c
    source/stm32h5xx_hal_mmc.c
    source/stm32h5xx_hal_mmc_ex.c
    source/stm32h5xx_hal_msp_template.c
    source/stm32h5xx_hal_nand.c
    source/stm32h5xx_hal_nor.c
    source/stm32h5xx_hal_opamp.c
    source/stm32h5xx_hal_opamp_ex.c
    source/stm32h5xx_hal_otfdec.c
    source/stm32h5xx_hal_pcd.c
    source/stm32h5xx_hal_pcd_ex.c
    source/stm32h5xx_hal_pka.c
    source/stm32h5xx_hal_pssi.c
    source/stm32h5xx_hal_pwr.c
    source/stm32h5xx_hal_pwr_ex.c
    source/stm32h5xx_hal_ramcfg.c
    source/stm32h5xx_hal_rcc.c
    source/stm32h5xx_hal_rcc_ex.c
    source/stm32h5xx_hal_rng.c
    source/stm32h5xx_hal_rng_ex.c
    source/stm32h5xx_hal_rtc.c
    source/stm32h5xx_hal_rtc_ex.c
    source/stm32h5xx_hal_sai.c
    source/stm32h5xx_hal_sai_ex.c
    source/stm32h5xx_hal_sd.c
    source/stm32h5xx_hal_sd_ex.c
    source/stm32h5xx_hal_sdram.c
    source/stm32h5xx_hal_smartcard.c
    source/stm32h5xx_hal_smartcard_ex.c
    source/stm32h5xx_hal_smbus.c
    source/stm32h5xx_hal_smbus_ex.c
    source/stm32h5xx_hal_spi.c
    source/stm32h5xx_hal_spi_ex.c
    source/stm32h5xx_hal_sram.c
    source/stm32h5xx_hal_tim.c
    source/stm32h5xx_hal_tim_ex.c
    source/stm32h5xx_hal_uart.c
    source/stm32h5xx_hal_uart_ex.c
    source/stm32h5xx_hal_usart.c
    source/stm32h5xx_hal_usart_ex.c
    source/stm32h5xx_hal_wwdg.c
    source/stm32h5xx_hal_xspi.c
    source/stm32h5xx_ll_adc.c
    source/stm32h5xx_ll_comp.c
    source/stm32h5xx_ll_cordic.c
    source/stm32h5xx_ll_crc.c
    source/stm32h5xx_ll_crs.c
    source/stm32h5xx_ll_dac.c
    source/stm32h5xx_ll_dlyb.c
    source/stm32h5xx_ll_dma.c
    source/stm32h5xx_ll_exti.c
    source/stm32h5xx_ll_fmac.c
    source/stm32h5xx_ll_fmc.c
    source/stm32h5xx_ll_gpio.c
    source/stm32h5xx_ll_i2c.c
    source/stm32h5xx_ll_i3c.c
    source/stm32h5xx_ll_icache.c
    source/stm32h5xx_ll_lptim.c
    source/stm32h5xx_ll_lpuart.c
    source/stm32h5xx_ll_opamp.c
    source/stm32h5xx_ll_pka.c
    source/stm32h5xx_ll_pwr.c
    source/stm32h5xx_ll_rcc.c
    source/stm32h5xx_ll_rng.c
    source/stm32h5xx_ll_rtc.c
    source/stm32h5xx_ll_sdmmc.c
    source/stm32h5xx_ll_spi.c
    source/stm32h5xx_ll_tim.c
    source/stm32h5xx_ll_ucpd.c
    source/stm32h5xx_ll_usart.c
    source/stm32h5xx_ll_usb.c
    source/stm32h5xx_ll_utils.c
)

target_link_libraries(HAL CMSIS)

# Include headers
target_include_directories(HAL PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include/
    ${CMAKE_CURRENT_SOURCE_DIR}/include/legacy
)
